--- a/app/modules/view2/view2.html
+++ b/app/modules/view2/view2.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col col-md-12">
-  <p>{{ test }}</p>
+  <input type="text" event-stream="input" data-event-type="keyup">
   </div>
 </div>
