--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div navbar></div>
-    <div ng-view class="container main">
+    <div ui-view class="container main">
     </div>
     <!-- script bundle: -->
     <script src="/build/bundle.js"></script>
