--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html ng-app="app">
   <head>
-    <title>ng-fn-webpack-seed</title>
+    <title>Chatapp</title>
   </head>
   <body>
     <div navbar></div>
