misc (in a hurry)

--- a/app/modules/console/console.tpl.html
+++ b/app/modules/console/console.tpl.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col col-md-12">
-  <input type="text" event-stream="input" data-event-type="keyup">
+  <input type="text" ng-model="input">
   </div>
 </div>
