--- a/app/modules/console/console.tpl.html
+++ b/app/modules/console/console.tpl.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col col-md-12">
-  <input type="text" ng-model="input">
+  <input type="text" ng-model="input" ng-keyup="$event.keyCode == 13 && submit(input)">
   </div>
 </div>
