reorganizing, changed views/styling

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
     <title>Chatapp</title>
   </head>
   <body>
-    <div navbar></div>
-    <div ui-view class="container main">
-    </div>
+    <navbar items="navigation" title="Chatapp">
+    </navbar>
+    <div ui-view class="main"></div>
     <!-- script bundle: -->
     <script src="/build/bundle.js"></script>
   </body>
