--- a/app/modules/console/console.tpl.html
+++ b/app/modules/console/console.tpl.html
@@ -1,5 +1,10 @@
-<div class="row">
-  <div class="col col-md-12">
-  <input type="text" ng-model="input" ng-keyup="$event.keyCode == 13 && submit(input)">
+<div class="console">
+  <div class="container">
+    <div class="row">
+      <div class="col col-md-12">
+        <textarea ng-model="input" ng-keyup="$event.keyCode == 13 && submit(input)" class="console-textarea" placeholder="type here...">
+        </textarea>
+      </div>
+    </div>
   </div>
 </div>
