--- a/app/modules/feed/feed.tpl.html
+++ b/app/modules/feed/feed.tpl.html
@@ -1,10 +1,12 @@
-<div class="row">
-  <div class="col col-md-12">
-    <ul>
-      <li ng-repeat="message in messages">
-      <p>{{message.originId}}</p>
-      <p>{{message.data}}</p>
-      </li>
-    </ul>
+<div class="feed container">
+  <div class="row">
+    <div class="col col-md-12">
+      <ul>
+        <li ng-repeat="message in messages">
+        <p>{{message.originId}}</p>
+        <p>{{message.data}}</p>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
