refactored server, client socket

--- a/app/modules/feed/feed.tpl.html
+++ b/app/modules/feed/feed.tpl.html
@@ -3,7 +3,7 @@
     <div class="col col-md-12">
       <ul>
         <li ng-repeat="message in messages">
-        <p>{{message.originId}}</p>
+        <p>{{message.id}}</p>
         <p>{{message.data}}</p>
         </li>
       </ul>
